--- a/package.json
+++ b/package.json
@@ -1,21 +1,31 @@
 {
   "name": "taft",
   "version": "1.0.0",
+  "description": "Raft consensus algorithm implementation",
   "main": "dist/index.js",
-  "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "start": "npm run build && node dist/index.js"
+    "start": "node dist/index.js",
+    "dev": "ts-node src/index.ts",
+    "test": "ts-node src/test-harness.ts"
+  },
+  "keywords": [
+    "raft",
+    "consensus",
+    "distributed-systems"
+  ],
+  "author": "Your Name",
+  "license": "MIT",
+  "dependencies": {
+    "axios": "^1.6.2",
+    "pino": "^8.16.2",
+    "yargs": "^17.7.2"
   },
   "devDependencies": {
-    "@types/node": "^16.4.2",
-    "@types/yargs": "^17.0.24",
-    "typescript": "4.7.3"
-  },
-  "dependencies": {
-    "axios": "^1.4.0",
-    "pino": "^8.15.0",
-    "yargs": "^17.7.2"
+    "@types/node": "^20.10.0",
+    "@types/yargs": "^17.0.32",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.2"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
